Replaces Collections.singletonList by List.of