@@ -11,7 +11,6 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -78,7 +77,7 @@ public class DataLoader {
         List.of(new Book()
                         .setId(BOOK_ID_1)
                         .setTitle("Libro prueba mongo")
-                        .setAuthors(Collections.singletonList(new Author().setName("Edu").setSurname("Antón")))
+                        .setAuthors(List.of(new Author().setName("Edu").setSurname("Antón")))
                         .setIsbn("11-333-12")
                         .setReleaseDate(LocalDate.now())
                         .setPublisher(new Publisher().setName("Editorial 1").setCountry("ES").setOnline(false)),
@@ -94,14 +93,14 @@ public class DataLoader {
                 new Book()
                         .setId(BOOK_ID_3)
                         .setTitle("Libro prueba mongo 3")
-                        .setAuthors(Collections.singletonList(new Author().setName("Nadie").setSurname("Nobody")))
+                        .setAuthors(List.of(new Author().setName("Nadie").setSurname("Nobody")))
                         .setIsbn("12-9999-92")
                         .setReleaseDate(LocalDate.now())
                         .setPublisher(new Publisher().setName("Editorial 7").setCountry("ES").setOnline(true)),
                 new Book()
                         .setId(BOOK_ID_4)
                         .setTitle("Libro prueba mongo 4")
-                        .setAuthors(Collections.singletonList(new Author().setName("Perry").setSurname("Mason")))
+                        .setAuthors(List.of(new Author().setName("Perry").setSurname("Mason")))
                         .setIsbn("22-34565-12")
                         .setReleaseDate(LocalDate.now())
                         .setPublisher(new Publisher().setName("Editorial 33").setCountry("US").setOnline(true)))
